First draft for the overhauled Plastic font choice; added font choice policy to the Windows Look&Feel

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -15,8 +15,8 @@ INTRODUCTION
     The font lookup mechanism in the Windows L&f has been overhauled.
     And text component insets have been adjusted to better comply 
     with the Microsoft Layout Specification and Guidelines.
-    Also, Windows Vista is now support; bounds, insets and font
-    baselines positions are consistent.
+    Also, Windows Vista is now supported; bounds, insets and 
+    font baseline positions are consistent.
     
     The text component insets of the Plastic L&f family
     have been adjusted to the new Windows L&f dimensions.
@@ -32,21 +32,26 @@ CHANGES THAT AFFECT THE BINARY COMPATIBILITY
     All font options have been removed from the Windows L&f;
     it shall be as close to the native original as possible.
 
-    o Renamed Options.CONTROL_FONT_KEY to PLASTIC_CONTROL_FONT_KEY    
-    o Removed Options.MENU_FONT_KEY
+    o Replace Options.CONTROL_FONT_KEY and MENU_FONT_KEY by:
+      - PLASTIC_FONT_CHOICE_POLICY_KEY
+      - PLASTIC_CONTROL_FONT_KEY    
+      - PLASTIC_MENU_FONT_KEY    
+      - WINDOWS_FONT_CHOICE_POLICY_KEY
+      - WINDOWS_CONTROL_FONT_KEY    
+      - WINDOWS_MENU_FONT_KEY    
     o Removed Options.EXT_WINDOWS_NAME
     o Removed Options.FONT_SIZE_HINTS_KEY
     o Removed Options#getGlobalFontSizeHints
     o Removed Options#setGlobalFontSizeHints
+    o Removed PlasticLookAndFeel#getFontSizeHints
+    o Removed PlasticLookAndFeel#setFontSizeHints
     o Removed WindowsLookAndFeel#getFontSizeHints
     o Removed WindowsLookAndFeel#setFontSizeHints
-    o Removed FontSizeHints.MIXED
-    o Removed FontSizeHints.MIXED2
+    o Removed FontSizeHints
     o Removed LookUtils#createButtonMargin(boolean)
     o Removed LookUtils#installNarrowMargin
     o Removed WindowsButtonUI
     o Removed WindowsToggleButtonUI
-    o Moved FontSizeHints to com.jgoodies.looks.Plastic
     o Removed FontUtils
     o Options#initializeDefaultReplacements now private
     o Removed obsolete Plastic themes: SkyBluerTahoma, 
@@ -79,10 +84,13 @@ BUGS FIXED
     #50: ToolBar 3D effect ignores the orientation.
     #51: Windows combobox with custom render is too narrow.
     #60: Wrong combobox height in Java 5 and Java 6.
+    #67: Wrong menu border in Windows XP L&f.
     #69: Broken menu item anti-aliasing in Java 5 or later.
     #70: Inconsistent bounds, insets and baselines on Windows Vista.
     #71: Password echo character too small on Windows Vista.
     #73: Windows L&f ignores the desktop control font size setting.
+    #79: Windows combobox too narrow.
+    #80: Plastic combo arrow button is focusable in Java 6.
     
 
 NEW FEATURES
@@ -108,6 +116,7 @@ DISTRIBUTION CHANGES
 OTHER CHANGES
 
     o The Windows and Plastic L&fs have been tweaked for Windows Vista.
+    o Overhauled the Windows combobox layout and rendering.
     o Improved appearance of the Looks demo tabs on Windows.
     o Password field antialiasing honors the field's aa hint
       and uses subpixel aa if available.
