Prepared the beta2 build

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,12 +1,12 @@
 
                          JGoodies Looks
-                       Version 2.0 Snapshot
+                        Version 2.0 Beta2
                           Release Notes
                         
 
 INTRODUCTION
 
-    This is a stable pre-RC build for the JGoodies Looks 2.0.
+    This is a stable Beta build for the JGoodies Looks 2.0.
     The major changes are better support for Windows Vista,
     Java 5 and 6, and an overhauled font lookup in all L&fs.
     
@@ -23,39 +23,45 @@ INTRODUCTION
     well on other platforms. A new font customization mechanism
     allows you to change the fonts per L&f, platform, locale 
     and desktop settings.
-    
+
     THE HTML DOCUMENTATION IS INCONSISTENT WITH THE CODE.  
-    The docs will be updated for the 2.0 release candidate.
-    
+
     Although this is a beta, the contained Windows L&f
     and Plastic L&fs supercede all previous version w.r.t.
     consistency, micro design precision, and support
     for new Java runtimes and Windows editions.
     
-    The beta state shall indicate that the user community
-    can still change the new font lookup mechnism before
-    the 2.0 final is released. So speak up now if you need 
-    API changes or implementation changes.
+
+LOOKS 2.0 FINAL ROADMAP
+    
+    The API shall remain unchanged for the 2.0 final.
+    The new font lookup shall remain as-is, but will be
+    changed if some users detect major or minor issues.
+    The docs will be updated for the 2.0 release candidate.
+    
+    The release candidate is scheduled for February 28th.
+    It'll be turned into the final if no show stoppers come up.
     
     
 HELP REQUIRED FROM USERS WITH NON-WESTERN WINDOWS
 
     The Looks 2.0 shall better support non-western environments.
     Especially it shall be able to display Chinese, Japanese,
-    Korean and other non-western languages easily (Issue #10).
+    Korean, Thai and other non-western languages easily (Issue #10).
     This should work on non-Windows platforms, because the Looks 
     then use the logical fonts defined by the Java runtime. 
     And it may work on non-western Windows too; but I'd like 
     to verify the latter before publishing the 2.0 final.
     
     Therefore I'd like to get feedback from users that run 
-    a Chinese, Japanese, Korean, or other non-Western Windows XP
+    a Chinese, Japanese, Korean, Thai or other non-Western Windows XP
     or Windows Vista with Java 1.4.2, Java 5 or Java 6.
-    This Beta ships with a FontTest tool ("fonttest.jar") that 
+    This Beta2 ships with a FontTest tool ("fonttest.jar") that 
     displays detailed information about the Java environment,
     platform, and font settings. I should appreciate if some users 
-    of non-western Windows could run the tool, copy the information 
-    to the clipboard and send it to dev@looks.dev.java.net.
+    of a Chinese, Japanese, Korean, Thai or other non-Western Windows 
+    could run the tool, copy the information to the clipboard and 
+    send it to dev@looks.dev.java.net.
     
 	
 CHANGES THAT AFFECT THE BINARY COMPATIBILITY
@@ -126,10 +132,12 @@ CHANGES THAT AFFECT THE VISUAL COMPATIBILITY
     the new default font Segoe UI is significantly taller.
     
     Also, the default font chosen on Windows now honors
-    the desktop font setting (Normal/Large/Extra Large).
-    Although Microsoft recommends to use the font size
-    to get larger fonts, many applications ignore it
-    and just scale with the software resolution (96dpi/120dpi).
+    the desktop font setting (Normal/Large/Extra Large)
+    if supported by the Windows version, Windows language,
+    and Java renderer.
+    Microsoft recommends to use the desktop setting "font size"
+    to get larger fonts, many applications ignore it and 
+    just scale with the software resolution (96dpi/120dpi).
        On 96dpi the new font doesn't differ from the 
     font chosen by the Looks 1.x; it's Tahoma 8pt on modern
     Windows, and Segoe UI 9pt on Vista. However, on 120dpi
@@ -210,6 +218,7 @@ BUGS FIXED
     #105: Menu items mnemonic display shall check for show/hide status.
     #108: JMenu on JPopupMenu not always drawn in selected state.
     #110: NPE with invalid default Plastic theme set via system props.
+    #111: RTL menus have problems with accelerator alignment.
     
     
 KNOWN ISSUES
